# toolbox

./: README.md  package-lock.json  package.json
backend/: .env.example  README.md  pyproject.toml  zbpack.json
backend/app/: main.py  settings.py
backend/app/routers/: file_transfer.py  string_format.py
backend/app/services/: file_transfer_service.py
frontend/: .env.example  .gitignore  next.config.ts  package-lock.json  package.json
frontend/src/api/: file-transfer.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/api/download/[uniqueCode]/: route.tsx
frontend/src/app/api/upload/: route.tsx
frontend/src/app/file-converter/: page.tsx
frontend/src/app/file-transfer/: page.tsx
frontend/src/app/string-tools/: page.tsx
frontend/src/components/: main-nav.tsx
frontend/src/hooks/: use-file-transfer.ts
frontend/src/lib/api/: file-transfer.ts
src/app/file-compression/: page.tsx
src/components/: site-footer.tsx
